--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@
             <li class="site-nav__item">
               <a
                 href="./index.html"
-                class="site-nav__link site-nav__link--current site-nav__link--active"
+                class="site-nav__link "
                 >Студія</a
               >
             </li>
             <li class="site-nav__item">
-              <a href="./portfolio.html" class="site-nav__link">Портфоліо</a>
+              <a href="./portfolio.html" class="site-nav__link site-nav__link--current site-nav__link--active">Портфоліо</a>
             </li>
             <li class="site-nav__item">
               <a href="#" class="site-nav__link">Контакти</a>
